@@ -29,11 +29,11 @@ public interface IStateCache extends Serializable {
 	 * @param pageId
 	 *            page identifier to add
 	 * @param currentPageId
-	 *            page identifier of the current request. It can be null if no state id is present.  
+	 *            page identifier of the current request. It can be null if no state id is present.
 	 * @param isRefreshRequest
-	 * 			  if the request is a refresh request
+	 *            if the request is a refresh request
 	 * @param isAjaxRequest
-	 * 			  if the request is an ajax request
+	 *            if the request is an ajax request
 	 * 
 	 * @return If the cache has reached its maximum size, less important identifier is returned in order to delete it
 	 *         from session. Otherwise, null will be returned.
@@ -44,4 +44,12 @@ public interface IStateCache extends Serializable {
 	 * @return the pageIds
 	 */
 	public List<Integer> getPageIds();
+
+	/**
+	 * Return last page id in the cache.
+	 * 
+	 * @return page id
+	 * @since 2.1.14
+	 */
+	public Integer getLastPageId();
 }
