@@ -59,17 +59,18 @@ public class StateCache implements IStateCache {
 	 *            page identifier to add
 	 * @param currentPageId
 	 *            page identifier of the current request. It can be null if no state id is present.
-	 *            
+	 * 
 	 * @param isRefreshRequest
-	 * 			  if request is a refresh request
+	 *            if request is a refresh request
 	 * 
 	 * @param isAjaxRequest
-	 * 			  if request is an ajax request
+	 *            if request is an ajax request
 	 * 
 	 * @return If the cache has reached its maximum size, less important identifier is returned in order to delete it
 	 *         from session. Otherwise, null will be returned.
 	 */
-	public synchronized Integer addPage(int pageId, Integer currentPageId, boolean isRefreshRequest, boolean isAjaxRequest) {
+	public synchronized Integer addPage(int pageId, Integer currentPageId, boolean isRefreshRequest,
+			boolean isAjaxRequest) {
 
 		if (this.pageIds.contains(pageId)) {
 			// Page id already exist in session
@@ -80,7 +81,7 @@ public class StateCache implements IStateCache {
 			this.pageIds.add(pageId);
 
 			if (log.isDebugEnabled()) {
-				log.debug("Page with [" + pageId + "] added to the cache. Cache contains [" + pageIds + "]");
+				log.debug("Page with [" + pageId + "] added to the cache. Cache contains [" + this.pageIds + "]");
 			}
 
 			return removedKey;
@@ -95,11 +96,11 @@ public class StateCache implements IStateCache {
 	 *            page identifier of the current request. It can be null if no state id is present.
 	 * 
 	 * @param isRefreshRequest
-	 * 			  if request is a refresh request
+	 *            if request is a refresh request
 	 *
 	 * @param isAjaxRequest
-	 * 			  if request is an ajax request
-	 *            
+	 *            if request is an ajax request
+	 * 
 	 * @return Oldest page identifier in the map <code>pageIds</code>. Null in otherwise.
 	 */
 	public Integer cleanBuffer(Integer currentPageId, boolean isRefreshRequest, boolean isAjaxRequest) {
@@ -107,9 +108,10 @@ public class StateCache implements IStateCache {
 		Integer removed = null;
 
 		int totalPages = this.pageIds.size();
-		
+
 		// Remove last page when we know that browser's forward history is empty (See issue #67)
-		if (currentPageId != null && totalPages > 1 && currentPageId == pageIds.get(totalPages - 2) && isRefreshRequest && !isAjaxRequest) {
+		if (currentPageId != null && totalPages > 1 && currentPageId == this.pageIds.get(totalPages - 2)
+				&& isRefreshRequest && !isAjaxRequest) {
 			removed = this.pageIds.remove(totalPages - 1);
 		}
 
@@ -123,11 +125,22 @@ public class StateCache implements IStateCache {
 		return removed;
 	}
 
+	/**
+	 * Return last page id in the cache.
+	 * 
+	 * @return page id
+	 * @since 2.1.14
+	 */
+	public Integer getLastPageId() {
+
+		return this.pageIds.size() > 0 ? this.pageIds.get(this.pageIds.size() - 1) : null;
+	}
+
 	public String toString() {
 
 		StringBuffer result = new StringBuffer();
 		result.append("[");
-		for (Integer pageId : pageIds) {
+		for (Integer pageId : this.pageIds) {
 			result.append(" " + pageId);
 		}
 		result.append("]");
@@ -153,7 +166,7 @@ public class StateCache implements IStateCache {
 	 * @return the pageIds
 	 */
 	public List<Integer> getPageIds() {
-		return pageIds;
+		return this.pageIds;
 	}
 
 }
